pr(master): Agregar registro de usuario accediendo desde inicio de sesión y con validaciones en cliente (#1)
* fix(InicioSesionPagina.xaml): remover estilos no utilizados

* feat(InicioSesion): Agregar validaciones a campos correo y contrasena con utiilidad creada

* feat(recursos): añadir iconos para FormularioUsuarioPagina

* feat(DTO/Vistas): Añadir registro de perfil nuevo hasta envío de correo (pendiente confirmar para registrar) y navegabilidad

* feat: Añadir registro de usuario con validaciones de código de verificación

--- a/UVemyCliente.csproj
+++ b/UVemyCliente.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <None Remove="Fonts\Nunito-Italic-VariableFont_wght.ttf" />
     <None Remove="Fonts\Nunito-VariableFont_wght.ttf" />
+    <None Remove="Recursos\default_profile_image.png" />
     <None Remove="Recursos\delete.png" />
     <None Remove="Recursos\downloads.png" />
     <None Remove="Recursos\pause.png" />
@@ -19,6 +20,7 @@
     <None Remove="Recursos\sendB.png" />
     <None Remove="Recursos\sendW.png" />
     <None Remove="Recursos\success.png" />
+    <None Remove="Recursos\trash.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -41,6 +43,9 @@
 	  <Resource Include="Fonts\Nunito-VariableFont_wght.ttf">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </Resource>
+	  <Resource Include="Recursos\default_profile_image.png">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </Resource>
 	  <Resource Include="Recursos\delete.png" />
 	  <Resource Include="Recursos\downloads.png">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -59,6 +64,9 @@
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </Resource>
 	  <Resource Include="Recursos\success.png">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </Resource>
+	  <Resource Include="Recursos\trash.png">
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	  </Resource>
 	</ItemGroup>
