feat: Agregar modificación de datos de perfil junto con la subida/cambio de imagen de perfil

--- a/UVemyCliente.csproj
+++ b/UVemyCliente.csproj
@@ -11,16 +11,19 @@
   <ItemGroup>
     <None Remove="Fonts\Nunito-Italic-VariableFont_wght.ttf" />
     <None Remove="Fonts\Nunito-VariableFont_wght.ttf" />
+    <None Remove="Recursos\buscar.png" />
     <None Remove="Recursos\default_profile_image.png" />
     <None Remove="Recursos\delete.png" />
     <None Remove="Recursos\downloads.png" />
+    <None Remove="Recursos\library.png" />
     <None Remove="Recursos\pause.png" />
     <None Remove="Recursos\play.png" />
     <None Remove="Recursos\previous.png" />
+    <None Remove="Recursos\profile.png" />
+    <None Remove="Recursos\salir.png" />
     <None Remove="Recursos\sendB.png" />
     <None Remove="Recursos\sendW.png" />
     <None Remove="Recursos\success.png" />
-    <None Remove="Recursos\trash.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -43,12 +46,18 @@
 	  <Resource Include="Fonts\Nunito-VariableFont_wght.ttf">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </Resource>
+	  <Resource Include="Recursos\buscar.png">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </Resource>
 	  <Resource Include="Recursos\default_profile_image.png">
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	  </Resource>
 	  <Resource Include="Recursos\delete.png" />
 	  <Resource Include="Recursos\downloads.png">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </Resource>
+	  <Resource Include="Recursos\library.png">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	  </Resource>
 	  <Resource Include="Recursos\pause.png">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -57,6 +66,12 @@
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </Resource>
 	  <Resource Include="Recursos\previous.png" />
+	  <Resource Include="Recursos\profile.png">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </Resource>
+	  <Resource Include="Recursos\salir.png">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </Resource>
 	  <Resource Include="Recursos\sendB.png">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </Resource>
@@ -64,9 +79,6 @@
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </Resource>
 	  <Resource Include="Recursos\success.png">
-	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-	  </Resource>
-	  <Resource Include="Recursos\trash.png">
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	  </Resource>
 	</ItemGroup>
