--- a/App.config
+++ b/App.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<add key="ApiBaseUrl" value="http://localhost:3000/api/" />
+		<add key="ApiBaseUrl" value="http://192.168.100.73/api/" />
+		<add key="ApiBaseUrlGrpc" value="http://192.168.100.73:3001" />
+
 	</appSettings>
 </configuration>
